adding a front page

--- a/Projects/3/index.html
+++ b/Projects/3/index.html
@@ -87,7 +87,7 @@
                     <!--Card 2-->
                     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                         <div class="mdl-card__media">
-                            <img class="article-image" src="towed.jpg" border="0" alt="">
+                            <img class="article-image" src="towed.jpeg" border="0" alt="">
                         </div>
                         <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text">Find My Towed Vehicle</h2>
@@ -119,7 +119,7 @@
                     <!--Card 4-->
                     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                         <div class="mdl-card__media">
-                            <img class="article-image" src="inspection.jpg" border="0" alt="">
+                            <img class="article-image" src="inspector.jpg" border="0" alt="">
                         </div>
                         <div class="mdl-card__title">
                             <h2 class="https://preview.c9users.io/matt_wong/webdevaboutme/Api/Data%20Inspection/foodinspections.html">Food Inspections</h2>
@@ -132,7 +132,7 @@
                     <!--Card 5-->
                     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                         <div class="mdl-card__media">
-                            <img class="article-image" src=" images/example-work04.jpg" border="0" alt="">
+                            <img class="article-image" src=" maps.jpeg" border="0" alt="">
                         </div>
                        
                         <div class="mdl-card__title">
@@ -152,7 +152,7 @@
                     <!--Card 6-->
                     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                         <div class="mdl-card__media">
-                            <img class="article-image" src=" images/example-work08.jpg" border="0" alt="">
+                            <img class="article-image" src=" calculator.jpeg" border="0" alt="">
                         </div>
                         <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text">Tip Calculator</h2>
