--- a/Projects/3/index.html
+++ b/Projects/3/index.html
@@ -127,6 +127,9 @@
                          <div>
                             <a href="https://preview.c9users.io/matt_wong/webdevaboutme/Api/Data%20Inspection/potholes.html?_c9_id=livepreview1&_c9_host=https://ide.c9.io">Click here to access</a>
                         </div>
+                        <div class="mdl-card__supporting-text">
+                            Use this website to access the Chicago database to find more details about food inspections in Chicago to see if your favorite restaurants are up to date with their inspections.
+                        </div>
                     </div>
                     
                     <!--Card 5-->
@@ -142,7 +145,7 @@
                             <a href="https://preview.c9users.io/matt_wong/webdevaboutme/assignment%203/googlemaps.html?_c9_id=livepreview1&_c9_host=https://ide.c9.io">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
-                            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
+                            Use this google map api to find directions from lane tech to horner park.
                         </div>
                         <div class="mdl-card__actions mdl-card--border">
                             <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
@@ -161,7 +164,7 @@
                             <a href="https://preview.c9users.io/matt_wong/webdevaboutme/tipCalculator/index.html?_c9_id=livepreview2&_c9_host=https://ide.c9.io">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
-                            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
+                           Use this tip calculator to find how much you should tip your server by entering your bill with the percent you want to pay.
                         </div>
                         <div class="mdl-card__actions mdl-card--border">
                             <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
