--- a/Projects/3/index.html
+++ b/Projects/3/index.html
@@ -37,7 +37,7 @@
                 <div class="mdl-layout__header-row portfolio-logo-row">
                     <span class="mdl-layout__title">
                         <div class="portfolio-logo"></div>
-                        <span class="mdl-layout__title">Simple portfolio website</span>
+                        <span class="mdl-layout__title">Matt Wong's Portfolio</span>
                     </span>
                 </div>
                 
