--- a/Projects/3/index.html
+++ b/Projects/3/index.html
@@ -46,9 +46,7 @@
                 <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                     <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                         <a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
-                        <a class="mdl-navigation__link" href="blog.html">Blog</a>
                         <a class="mdl-navigation__link" href="about.html">About</a>
-                        <a class="mdl-navigation__link" href="contact.html">Contact</a>
                     </nav>
                 </div>
                 
@@ -77,7 +75,7 @@
                             <h2 class="mdl-card__title-text">CTA Bus Tracker</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/2/index.html?_c9_id=livepreview2&_c9_host=https://ide.c9.io">Click here to access</a>
+                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/ctabustracker.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             This app helps you find the bus stops for addison and campbell and addison and wester
@@ -93,7 +91,7 @@
                             <h2 class="mdl-card__title-text">Find My Towed Vehicle</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevaboutme/Api/Data%20Inspection/towed.html?_c9_id=livepreview0&_c9_host=https://ide.c9.io">Click here to access</a>
+                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/towedvehicles.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             Use this website to find your vehicle that was towed in the Chicago Land area.
@@ -125,7 +123,7 @@
                             <h2 class="https://preview.c9users.io/matt_wong/webdevaboutme/Api/Data%20Inspection/foodinspections.html">Food Inspections</h2>
                         </div>
                          <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevaboutme/Api/Data%20Inspection/potholes.html?_c9_id=livepreview1&_c9_host=https://ide.c9.io">Click here to access</a>
+                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/potholes.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             Use this website to access the Chicago database to find more details about food inspections in Chicago to see if your favorite restaurants are up to date with their inspections.
@@ -142,7 +140,7 @@
                             <h2 class="mdl-card__title-text">Google Map Api</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevaboutme/assignment%203/googlemaps.html?_c9_id=livepreview1&_c9_host=https://ide.c9.io">Click here to access</a>
+                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/googlemap.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             Use this google map api to find directions from lane tech to horner park.
@@ -161,7 +159,7 @@
                             <h2 class="mdl-card__title-text">Tip Calculator</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevaboutme/tipCalculator/index.html?_c9_id=livepreview2&_c9_host=https://ide.c9.io">Click here to access</a>
+                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/tipcalculator.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                            Use this tip calculator to find how much you should tip your server by entering your bill with the percent you want to pay.
