--- a/Projects/3/index.html
+++ b/Projects/3/index.html
@@ -75,7 +75,7 @@
                             <h2 class="mdl-card__title-text">CTA Bus Tracker</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/ctabustracker.html">Click here to access</a>
+                            <a href="https://mattwong22.github.io/webdevs2/Projects/3/ctabustracker.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             This app helps you find the bus stops for addison and campbell and addison and wester
@@ -91,7 +91,7 @@
                             <h2 class="mdl-card__title-text">Find My Towed Vehicle</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/towedvehicles.html">Click here to access</a>
+                            <a href="https://mattwong22.github.io/webdevs2/Projects/3/towedvehicles.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             Use this website to find your vehicle that was towed in the Chicago Land area.
@@ -107,7 +107,7 @@
                             <h2 class="mdl-card__title-text">Potholes in the City of Chicago</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevaboutme/Api/Data%20Inspection/potholes.html?_c9_id=livepreview1&_c9_host=https://ide.c9.io">Click here to access</a>
+                            <a href="https://mattwong22.github.io/webdevs2/Projects/3/foodinspection.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             Use this website to access the Chicago database to find more details about potholes
@@ -123,7 +123,7 @@
                             <h2 class="https://preview.c9users.io/matt_wong/webdevaboutme/Api/Data%20Inspection/foodinspections.html">Food Inspections</h2>
                         </div>
                          <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/potholes.html">Click here to access</a>
+                            <a href="https://mattwong22.github.io/webdevs2/Projects/3/potholes.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             Use this website to access the Chicago database to find more details about food inspections in Chicago to see if your favorite restaurants are up to date with their inspections.
@@ -140,7 +140,7 @@
                             <h2 class="mdl-card__title-text">Google Map Api</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/googlemap.html">Click here to access</a>
+                            <a href="https://mattwong22.github.io/webdevs2/Projects/3/googlemap.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                             Use this google map api to find directions from lane tech to horner park.
@@ -159,7 +159,7 @@
                             <h2 class="mdl-card__title-text">Tip Calculator</h2>
                         </div>
                         <div>
-                            <a href="https://preview.c9users.io/matt_wong/webdevs2/Projects/3/tipcalculator.html">Click here to access</a>
+                            <a href="https://mattwong22.github.io/webdevs2/Projects/3/tipcalculator.html">Click here to access</a>
                         </div>
                         <div class="mdl-card__supporting-text">
                            Use this tip calculator to find how much you should tip your server by entering your bill with the percent you want to pay.
