--- a/Projects/3/about.html
+++ b/Projects/3/about.html
@@ -62,7 +62,7 @@
                         <h2 class="mdl-card__title-text">About </h2>
                     </div>
                     <div class="mdl-card__media">
-                        <img class="article-image" src="ltcs.jpg" border="0" alt="">
+                        <img class="article-image" src="baseball.jpg" border="0" alt="">
                     </div>
 
                     <div class="mdl-grid portfolio-copy">
@@ -80,7 +80,7 @@
             </div>
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">© Mohammed Jamal 2017 Some Rights Reserved</div>
+                    <div class="mdl-logo">© Matthew Wong 2017 Some Rights Reserved</div>
                 </div>
                 <div class="mdl-mini-footer__right-section">
                 </div>
