--- a/Projects/3/about.html
+++ b/Projects/3/about.html
@@ -42,7 +42,7 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link" href="index.html">Portfolio</a>
-                    <a class="mdl-navigation__link is-active" href="about.html">About</a>
+                    <a class=x"mdl-navigation__link is-active" href="about.html">About</a>
                 </nav>
             </div>
         </header>
