--- a/Projects/5/index.html
+++ b/Projects/5/index.html
@@ -54,7 +54,7 @@ li a:hover:not(.active) {
     <h2> My favorite sports team </h2>
     <p>I have been a Chicago Cubs fan for all my life.  Although they have not been very good up until this year, I have stuck with them for all my life because I have always loved to watch them play whether or not they would lose.</p>
     <br>
-        <p><a href="http://chicago.cubs.mlb.com/index.jsp?c_id=chc"> More Information About The Chicago Cubs Here! </a></p>
+        <p><a href="http://chicago.cubs.mlb.com/index.jsp?c_id=chc"> 
     <br> 
     
     
