--- a/Projects/5/hobbies.html
+++ b/Projects/5/hobbies.html
@@ -52,7 +52,7 @@ li a:hover:not(.active) {
     <h3>Basebal</h3>
     <p>In the summer I enjoy playing baseball for my travel baseball team on the Warren Park Warriors.  I have trained my whole life to become a Now that I am in high school, I made it onto the Lane Tech baseball team as well. </p>
     <p>I have been playing baseball ever since I was five years old.  The game of baseball is one of the best games to play and is also one of the best games to watch.  I have developed a passion for the game.</p>
-    <img src="kbdebut.jpg" alt="Steak" style="width:200px;height:150px;">"> More Information About The Chicago Cubs Here! </a></p>
+    <img src="kbdebut.jpg" alt="Steak" style="width:200px;height:150px;">
 
     <hr>
     <h2>Chess</h2>
