--- a/Projects/5/friends.html
+++ b/Projects/5/friends.html
@@ -52,11 +52,11 @@ h3 {
     
     <h1 style="color:purple;margin-left:220px;"> About Matthew Wong </h1>
    
-   <ul>
-  <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="friends.html">Friends</a></li>
-  <li><a href="hobbies.html">Hobbies</a></li>
-</ul>
+<div class="w3-bar w3-theme">
+  <a href="index.html">Home</a>
+  <a href="friends.html" class="active">Friends</a>
+  <a href="hobbies.html">Hobbies</a>
+</div>
 
     <h2>Friends</h2>
     <p>I have many friends from all walks of life and from many different activies.</p>
