--- a/Projects/5/hobbies.html
+++ b/Projects/5/hobbies.html
@@ -42,11 +42,11 @@ li a:hover:not(.active) {
     
     <h1 style="color:purple;margin-left:220px;"> About Matthew Wong </h1>
    
-   <ul>
-  <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="friends.html">Friends</a></li>
-  <li><a href="hobbies.html">Hobbies</a></li>
-</ul>
+   <div class="w3-bar w3-theme">
+  <a href="index.html">Home</a>
+  <a href="friends.html">Friends</a>
+  <a href="hobbies.html" class="active">Hobbies</a>
+</div>
 
     <h2>Hobbies</h2>
     <h3>Basebal</h3>
