--- a/Projects/5/index.html
+++ b/Projects/5/index.html
@@ -42,11 +42,12 @@ li a:hover:not(.active) {
     
     <h1 style="color:purple;margin-left:220px;"> About Matthew Wong </h1>
    
-   <ul>
-  <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="friends.html">Friends</a></li>
-  <li><a href="hobbies.html">Hobbies</a></li>
-</ul>
+  <div class="w3-bar w3-theme">
+  <a href="index.html" class="active">Home</a>
+  <a href="friends.html" >Friends</a>
+  <a href="hobbies.html">Hobbies</a>
+</div>
+
     <h2> My Family</h2>
    
     <p> My family is a family of six.  We are very energetic too.  We all play sports and chess.  I have two brothers and a sister while I am the oldest.  My brothers are 12 years old and seven years old while my sister is 10 years old.  My is very big on baseball and supoorts us in deleloping our skills a lot while my mom is more leanant towards academics.  </P>
