--- a/Projects/3/index.html
+++ b/Projects/3/index.html
@@ -169,3 +169,19 @@
                         </div>
                     </div>
                     
+                     <!--Card 7-->
+                    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                        <div class="mdl-card__media">
+                            <img class="article-image" src="free.png" border="0" alt="">
+                        </div>
+                        <div class="mdl-card__title">
+                            <h2 class="mdl-card__title-text">Free Code Camp</h2>
+                        </div>
+                        <div>
+                            <a href="https://www.freecodecamp.com/fcc11055705">Click here to access</a>
+                        </div>
+                        <div class="mdl-card__supporting-text">
+                           From free code camp, I have learned most of what it was able to teach me in html, bootstrap, javascript, and jquery.  Free code camp has helped me become a better coder and helped me understand the basics better.  From what I have learned, I will be able to take my coding skills to the next level in the future.
+                        </div>
+                    </div>
+                    
